--- a/style.css
+++ b/style.css
@@ -18,9 +18,213 @@ time, mark, audio, video {
     color: inherit;
     vertical-align: baseline;
 }
-.container{
+
+.container {
     max-width: 1440px;
     width: 100%;
     margin: 0 auto;
-    background-color: red;
 }
+
+/*star header*/
+
+/*end header*/
+
+/*start main section one*/
+.main .one .main-logo {
+    background-image: url("images/bg_1 1.png");
+    min-height: 740px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.main .one .main-logo h1 {
+    text-align: center;
+    font-weight: 600;
+    font-size: 42px;
+    color: #FFFFFF;
+    padding-top: 102px;
+    font-family: Montserrat;
+}
+
+.main .one .main-logo .yellow {
+    color: #FDFF8C;
+}
+
+.main .one .main-logo .text {
+    font-weight: 500;
+    font-size: 18px;
+    color: #FFFFFF;
+    padding-top: 32px;
+    text-align: center;
+    font-family: Montserrat;
+}
+
+.main .one .main-logo button {
+    width: 359px;
+    height: 80px;
+    background-color: #FDFF8C;
+    border-radius: 9px;
+    font-weight: 500;
+    font-size: 20px;
+    color: #000000;
+    display: block;
+    margin: 50px auto;
+    font-family: Montserrat;
+}
+
+.main .one .main-logo .text_ {
+    font-weight: 500;
+    font-size: 16px;
+    color: #FFFFFF;
+    text-align: center;
+    font-family: Montserrat;
+}
+
+@media (max-width: 640px) {
+    .main .one .main-logo h1 {
+        font-size: 36px;
+    }
+}
+
+/*main section one*/
+/*start main section two*/
+.main .two .advantages {
+    background: linear-gradient(to right, #E9EAE6, #FCFE92);
+    min-height: 908px;
+
+}
+
+.main .two .advantages h2 {
+    padding-top: 100px;
+    padding-bottom: 41px;
+    font-weight: 500;
+    font-size: 42px;
+    color: #000000;
+    font-family: Montserrat;
+    line-height: 100%;
+    text-align: center;
+}
+
+.main .two .advantages .advantages-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 49px 130px;
+    max-width: 1160px;
+    margin: 0 auto;
+}
+
+.main .two .advantages .advantages-grid .advantage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.main .two .advantages .advantages-grid .advantage p {
+    font-weight: 500;
+    font-size: 16px;
+    color: #000000;
+    font-family: Montserrat;
+    padding-top: 35px;
+}
+
+@media (max-width: 740px) {
+    .main .two .advantages .advantages-grid {
+        grid-template-columns:repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 640px) {
+    .main .two .advantages .advantages-grid {
+        grid-template-columns: 1fr;
+    }
+
+    .main .two .advantages h2 {
+        font-size: 32px;
+    }
+}
+
+/*end main section two*/
+/*star main section thee*/
+.main .three .our_services h3 {
+    font-weight: 500;
+    font-size: 42px;
+    color: #000000;
+    font-family: Montserrat;
+    text-align: center;
+    padding-top: 100px;
+    padding-bottom: 60px;
+}
+
+.main .three .our_services .service-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px 40px;
+    margin: 0 auto;
+    max-height: 836px;
+    max-width: 1160px;
+}
+
+.main .three .our_services .service-grid .service {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    border: 1px solid #DDDDDD;
+    border-radius: 7px;
+}
+
+.main .three .our_services .service-grid .service-text {
+    background: linear-gradient(to right, #E9EAE6, #FCFE92);
+}
+
+.main .three .our_services .service-grid .service-text p {
+    padding-top: 28px;
+    font-weight: 600;
+    font-size: 14px;
+    font-family: Montserrat;
+}
+
+.main .three .our_services .service-grid p {
+    padding-top: 29px;
+    font-weight: 500;
+    font-size: 14px;
+    font-family: Montserrat;
+}
+
+.main .three .our_services .service-grid .recognize {
+    width: 235px;
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid #000000;
+    font-weight: 500;
+    font-size: 12px;
+    font-family: Montserrat;
+    margin-bottom: 15px;
+    margin-top: 24px;
+    background-color: #FFFFFF;
+}
+
+.main .three .our_services .service-grid .get {
+    margin-bottom: 25px;
+    width: 235px;
+    height: 40px;
+    border-radius: 5px;
+    font-weight: 500;
+    font-size: 12px;
+    font-family: Montserrat;
+    background-color: #000000;
+    color: #FFFFFF;
+}
+
+@media (max-width: 640px) {
+    .main .three .our_services .service-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .main .three .our_services h3 {
+        font-size: 32px;
+    }
+}
+
+
